--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["std"]
+default = ["debug"]
 std = []
 debug = []
 auto_trigger = []
@@ -20,6 +20,11 @@ panic-halt = "0.2.0"
 nb = "0.1.2"
 ufmt = "0.1.0"
 avr-device = "0.2.2"
+embedded-hal = "0.2.4"
+smart-leds = "0.3.0"
+#ws2812-timer-delay = {version = "0.3.0", features = ["slow"]}
+smart-leds-trait = "0.2.1"
+ws2812-spi = { version = "0.4.0", features = ["mosi_idle_high"] }
 
 [dependencies.void]
 version = "1.0.2"
